--- a/view1/css/card.css
+++ b/view1/css/card.css
@@ -62,3 +62,41 @@ hr.style-five:after {
     /* Not really supposed to work, but does */
     content: '\00a0'; /* Prevent margin collapse */
 }
+
+.textarea_style {
+    border: 0;
+    background-color: transparent;
+    /*scrollbar-arrow-color:yellow;
+    scrollbar-base-color:lightsalmon;
+    overflow: hidden;*/
+    color: #666464;
+    height: auto;
+}
+
+/* Buttons */
+
+.button
+{
+    position: relative;
+    display: inline-block;
+    margin-top: 2em;
+    padding: 0.8em 1.5em;
+    background: #1d1d1d;
+    border-radius: 6px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1em;
+    color: #FFF;
+    -moz-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    -webkit-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    -o-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    -ms-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+    cursor: pointer;
+}
+
+.button:hover
+{
+    background: #141414;
+    color: #FFF !important;
+}
