--- a/view3/css/add_article.css
+++ b/view3/css/add_article.css
@@ -22,3 +22,21 @@
     margin-top: 35px;
     margin-bottom: 35px;
 }
+
+.add_btn a {
+    background: none repeat scroll 0 0 #ff6766;
+    color: #fff;
+    float: left;
+    font-size: 13px;
+    font-weight: 700;
+    padding: 8px 20px;
+    text-align: left;
+    text-transform: uppercase;
+    border:2px solid #ff6766;
+}
+.add_btn a:hover {
+    background:#fff;
+    color: #ff6766;
+    border:2px solid #ff6766;
+    text-decoration:none;
+}
