--- a/view1/css/card.css
+++ b/view1/css/card.css
@@ -34,7 +34,7 @@
     padding: 0px;
 }
 
-.invest_button > input[type='button'] {
+.invest_button > input[type='submit'] {
     background: none repeat scroll 0 0;
     background-color: #2975d8;
     border: 2px solid;
